Fixed tablet view alignment issues for contact section by resetting flex properties and padding

--- a/layout/_contact.scss
+++ b/layout/_contact.scss
@@ -55,10 +55,11 @@
 
 @media screen and (min-width: 576px) {
   .contact__logo-container {
+    min-height: auto;
     display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
-    padding: 30px 50px;
+    padding: 40px 50px;
   }
 
   .contact__logo {
