--- a/main.css
+++ b/main.css
@@ -488,16 +488,18 @@
 
 @media screen and (min-width: 576px) {
   .contact__logo-container {
+    min-height: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 30px 50px;
+    padding: 40px 50px;
   }
   .contact__logo {
     max-height: 70px;
